--- a/index.html
+++ b/index.html
@@ -17,9 +17,75 @@
 			a {
 				color: #48f;
 			}
+			#title {
+				position: absolute;
+				top: 10px;
+				width: 100%;
+				text-align: center;
+			}
+
+			#tools {
+				margin: 10px;
+				position: absolute;
+				left: 0;
+				top: 0;
+			}
+
+			#floors {
+				position: absolute;
+				right: 0;
+				top: 0;
+				margin: 10px;
+			}
+
+			.button {
+				margin: 10px 0;
+				background: rgba(0,0,0,0.8);
+				padding: 10px;
+				border-radius: 3px;
+				cursor: pointer;
+			}
+
+			.button:hover {
+				background: #555;
+			}
 		</style>
 	</head>
 	<body>
+		<div id="container">
+			<div id="title">
+				critial reality - webvr dnd
+			</div>
+
+			<div id="tools">
+				Tools
+				<div class="button">
+					Select
+				</div>
+				<div class="button">
+					Create Wall
+				</div>
+				<div class="button">
+					Create Floor
+				</div>
+				<div class="button">
+					Move
+				</div>
+			</div>
+
+			<div id="floors">
+				Floors
+				<div class="button">
+					1
+				</div>
+				<div class="button">
+					2
+				</div>
+				<div class="button">
+					+
+				</div>
+			</div>
+		</div>
 
 		<script src="node_modules/three/build/three.js"></script>
 		<script src="node_modules/three/examples/js/vr/WebVR.js"></script>
